# dotfiles-manager

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  bash_common  bash_linux  bash_mac  bash_profile  bashrc  dotfiles.py  dotfilesinstaller.py  imports  install_dotfiles.py  pyproject.toml  setup.py  test_dotfiles.py  vimrc
.github/: WORKFLOWS.md
.github/workflows/: quality.yml  test.yml
dotfiles/: bashfile.py  constants.py  dotfiles.py  env.py  filewriter.py  gitconfig.py  ioutils.py  setup.py  systems.py  testdriver.py
dotfiles-manager/: .dotfilesrc  bashfile.py  constants.py  dotfilesmanager.py  env.py  gitconfig.py  ioutils.py  vimrc.py
dotfiles-manager/inputfiles/: bash_common  bash_linux  bash_mac_gnu  gitconfig
dotfiles-manager/scripts/sourced/: extract.sh  keep-trying.sh
dotfiles-manager/test/: bashfileinttest.py  bashfiletest.py  dotfilesinttest.py  dotfilestest.py  gitconfiginttest.py  ioutilsinttest.py  ioutilstest.py  methodstubs.py  testenv.py  testenvtest.py  testfilemocks.py  vimrcinttest.py
dotfiles/inputfiles/: bash_common  bash_mac
dotfiles/test/: bashfileinttest.py  bashfiletest.py  dotfilese2etest.py  dotfilesinttest.py  dotfilestest.py  gitconfiginttest.py  ioutilsinttest.py  ioutilstest.py  methodstubs.py  testenv.py  testfilemocks.py
dotfilesmanager/: .pylintrc  __init__.py  bashfile.py  config.py  constants.py  dfm.py  env.py  ioutils.py
dotfilesmanager/env/: __init__.py
dotfilesmanager/ioutils/: __init__.py  ioutils.py
dotfilesmanager/test/: .pylintrc  bashfileinttest.py  bashfiletest.py  dotfilesmanagerinttest.py  dotfilesmanagertest.py  env.py  ioutilsinttest.py  ioutilstest.py  test_dotfilesmanager.py  test_dotfilesmanager_int.py  test_ioutils.py  test_ioutils_int.py  testenv.py  testfilemocks.py  testrunner.sh
dotfilesmanager/test/env/: env.py
inputfiles/: bash_common  bash_linux  bash_mac
linux/: bashrc
mac/: .gitignore  bash_profile  vimrc
scripts/: .dotfiles.py.swo  dotfiles.py  test_dotfiles.py
tests/: conftest.py  test_dotfilesmanager.py  test_dotfilesmanager_int.py  test_ioutils.py  test_ioutils_int.py
